- Fix: Correctly display Meta-boxes of other plugins in the popup-editor.
- Fix: Plugins that use custom URL rewriting are working now (e.g. NextGen Gallery)
- Fix: PopUps can be edited even on servers with memcache/similar caching extensions.
- Fix: Resolve "Strict Standards" notes in PHP 5.4
- Fix: Rule "Not internal link" now works correctly when opening page directly.
- Better: Forms inside PopUps will only refresh the PopUp and not reload the page.
- Better: Detection of theme compatibility for loading method "Page Footer" improved.

4.6.1.1
----------------------------------------------------------------------
- New: Alternative Country Lookup services added to Settings page.
- New: Added Contextual Help to the PopUp editor to show supported shortcodes.
- Fix: Logic of rule "[Not] On specific URL" corrected.
- Fix: Close forever now works also via click on background layer.
- Fix: Behaviour "mouse leaves the browser" is not triggered when using the scrollbar.
- Fix: Bug in Membership rule was fixed that did cause an php error.
- Fix: Appointments+ shortcodes now work inside PopUps.
- Better: Improved info on supported shortcodes.

4.6.1
----------------------------------------------------------------------
- Fix: For some users the plugin was not loading after update to 4.6
- Fix: Old Popups will now replace shortcodes correctly.

4.6 - 2014-08-22
----------------------------------------------------------------------
- Completely re-build the UI from ground up!
- Migrated PopUps to a much more flexible data structure.
- Merged sections "Add-Ons" and "Settings" to a single page.
- Removed old legacy code; plugin is cleaner and faster.
- New feature: Preview PopUp inside the Editor!
- Three new, modern PopUp styles added.
- Featured Image support for new PopUp styles.
- A single page can display multiple PopUps.

4.5.3 - 2013-11-15
----------------------------------------------------------------------
- Fix for argument passing issue.